Fix modal dialog on mobile devices.

--- a/src/less/ripple/pagemodes.less
+++ b/src/less/ripple/pagemodes.less
@@ -87,9 +87,6 @@ html.pm-single {
 }
 
 .modal {
-  width: 400px;
-  margin: -150px 0 0 -200px;
-
   .modal-body {
     padding: 25px 15px 25px;
   }
